<resources>
    <string name="app_name">cursoAndroid</string>

    <!-- Login Screen -->
    <string name="title_login_label">Identificación de usuarios</string>
    <string name="username_login_label">Username</string>
    <string name="password_login_label">Password</string>
    <string name="save_login_label">Guardar usuario</string>
    <string name="action_validate">Validar</string>
    <string name="msg_login_ok">Todo OK</string>
    <string name="msg_login_fails">Las credenciales no son correctas</string>
    <string name="card_text_1">03-06-21</string>
    <string name="card_text_2">Lorem</string>
    <string name="card_text_3">Lorem Lorem Lorem</string>
    <string name="title_ut3_ej11">Colabora</string>
    <string name="text1_ut3_ej11">Hazte socio</string>
    <string name="comment_ut3_ej11">Colabora donando una cantidad fija durante X tiempo</string>
</resources>