<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/first_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@tools:sample/avatars"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/first_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_text_1"
        android:textColor="@color/blue"
        android:layout_toEndOf="@id/first_element"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/second_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_text_2"
        android:textColor="@color/blue"
        android:layout_below="@id/first_text"
        android:layout_toEndOf="@id/first_element"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_text_3"
        android:textColor="@color/blue"
        android:layout_below="@id/second_text"
        android:layout_toEndOf="@id/first_element"/>
</RelativeLayout>