<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/first_element"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/first_text"
        app:layout_constraintTop_toTopOf="@id/first_element"
        app:layout_constraintStart_toEndOf="@id/first_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_text_1"
        android:textColor="@color/blue"/>

    <TextView
        android:id="@+id/second_text"
        app:layout_constraintTop_toBottomOf="@id/first_text"
        app:layout_constraintStart_toEndOf="@id/first_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_text_2"
        android:textColor="@color/blue"/>
    <TextView
        app:layout_constraintTop_toBottomOf="@id/second_text"
        app:layout_constraintStart_toEndOf="@id/first_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_text_3"
        android:textColor="@color/blue"/>



</androidx.constraintlayout.widget.ConstraintLayout>