<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/medium_spacing">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_ut3_ej11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:textSize="@dimen/size_big"
            android:textColor="@color/blue"/>


        <!-- Card -->
        <ImageView
            android:id="@+id/first_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/first_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:textStyle="bold"
            android:text="@string/text1_ut3_ej11"
            android:textColor="@color/blue"
            app:layout_constraintStart_toEndOf="@id/first_image"
            app:layout_constraintTop_toTopOf="@id/first_image" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/comment_ut3_ej11"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/small_spacing"
            app:layout_constraintStart_toStartOf="@id/first_text"
            app:layout_constraintTop_toBottomOf="@id/first_text"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



